changed program to be java 1.8 compliant accidentally was working with jdk 14